# Sammi

./: .gitignore  CMakeLists.txt  README.md
cmake/: GenerateShaderCPPFile.cmake  ShaderCompile.cmake  tools.cmake
engine/: CMakeLists.txt
engine/shader/: CMakeLists.txt
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: axis.h  editor.h  editor_file_service.h  editor_global_context.h  editor_input_manager.h  editor_scene_manager.h  editor_ui.h
engine/source/editor/source/: axis.cpp  editor.cpp  editor_file_service.cpp  editor_global_context.cpp  editor_input_manager.cpp  editor_scene_manager.cpp  editor_ui.cpp  main.cpp
engine/source/meta_parser/: CMakeLists.txt  README.md
engine/source/meta_parser/parser/: main.cpp
engine/source/meta_parser/parser/common/: namespace.h  precompiled.h  schema_module.h
engine/source/meta_parser/parser/cursor/: cursor.cpp  cursor.h  cursor_type.cpp  cursor_type.h
engine/source/meta_parser/parser/generator/: generator.cpp  generator.h  reflection_generator.cpp  reflection_generator.h  serializer_generator.cpp  serializer_generator.h
engine/source/meta_parser/parser/language_types/: class.cpp  class.h  field.cpp  field.h  method.cpp  method.h  type_info.cpp  type_info.h
engine/source/meta_parser/parser/meta/: meta_data_config.h  meta_info.cpp  meta_info.h  meta_utils.cpp  meta_utils.h  meta_utils.hpp
engine/source/meta_parser/parser/parser/: parser.cpp  parser.h
engine/source/meta_parser/parser/template_manager/: template_manager.cpp  template_manager.h
engine/source/precompile/: precompile.cmake  precompile.json.in
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/base/: hash.h  macro.h
engine/source/runtime/core/color/: color.h
engine/source/runtime/core/log/: log_system.cpp  log_system.h
engine/source/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  math.cpp  math.h  math_headers.h  math_marcos.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  random.h  transform.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
engine/source/runtime/core/meta/: json.h  meta_example.cpp  meta_example.h
engine/source/runtime/core/meta/reflection/: reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h
engine/source/runtime/core/meta/serializer/: serializer.h
engine/source/runtime/function/character/: character.cpp  character.h
engine/source/runtime/function/controller/: character_controller.cpp  character_controller.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/input/: input_system.cpp  input_system.h
engine/source/runtime/function/render/: light.h  render_camera.cpp  render_camera.h  render_common.h  render_debug_config.h  render_entity.h  render_guid_allocator.h  render_helper.cpp  render_helper.h  render_mesh.h  render_object.h  render_pass.cpp  render_pass.h  render_pass_base.cpp  render_pass_base.h  render_pipeline.cpp  render_pipeline.h  render_pipeline_base.cpp  render_pipeline_base.h  render_resource.cpp  render_resource.h  render_resource_base.cpp  render_resource_base.h  render_scene.cpp  render_scene.h  render_swap_context.cpp  render_swap_context.h  render_system.cpp  render_system.h  render_type.h  window_system.cpp  window_system.h
engine/source/runtime/function/render/debugdraw/: debug_draw_buffer.cpp
engine/source/runtime/function/render/interface/: rhi.h  rhi_struct.h
engine/source/runtime/function/render/interface/vulkan/: vulkan_rhi.cpp  vulkan_rhi.h  vulkan_rhi_resource.h  vulkan_util.cpp  vulkan_util.h  vulkan_vma.cpp
engine/source/runtime/function/render/interface/vulkan/vulkanWrapper/: base.h  buffer.cpp  buffer.h  commandBuffer.cpp  commandBuffer.h  commandPool.cpp  commandPool.h  description.h  descriptorPool.cpp  descriptorPool.h  descriptorSet.cpp  descriptorSet.h  descriptorSetLayout.h  device.cpp  device.h  fence.cpp  fence.h  image.cpp  image.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  renderPass.cpp  renderPass.h  sampler.cpp  sampler.h  semaphore.cpp  semaphore.h  shader.cpp  shader.h  swapChain.cpp  swapChain.h  util.h  window.cpp  window.h  windowSurface.cpp  windowSurface.h
engine/source/runtime/function/render/passes/: color_grading_pass.cpp  color_grading_pass.h  combine_ui_pass.cpp  combine_ui_pass.h  directional_light_pass.cpp  directional_light_pass.h  fxaa_pass.cpp  fxaa_pass.h  main_camera_pass.cpp  main_camera_pass.h  particle_pass.cpp  particle_pass.h  pick_pass.cpp  pick_pass.h  point_light_pass.cpp  point_light_pass.h  tone_mapping_pass.cpp  tone_mapping_pass.h  ui_pass.cpp  ui_pass.h
engine/source/runtime/function/ui/: window_ui.cpp  window_ui.h
engine/source/runtime/platform/file_service/: file_service.cpp  file_service.h
engine/source/runtime/platform/path/: path.cpp  path.h
engine/source/runtime/resource/asset_manager/: asset_manager.cpp  asset_manager.h
engine/source/runtime/resource/config_manager/: config_manager.cpp  config_manager.h
engine/source/runtime/resource/res_type/common/: level.h  object.h  world.h
engine/source/runtime/resource/res_type/components/: animation.h
engine/source/runtime/resource/res_type/global/: global_particle.h  global_rendering.h
engine/template/: allReflectionFile.mustache  allSerializer.h.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
